# legsy_test_task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule.db  docker-compose.local.yaml  main.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 2023-04-19_13.34.58_initial_migration.py  2023-04-19_13.56.15_initial_migration.py  2023-04-20_17.05.42_added_index_to_product_nm_id.py
src/: main.py
src/api/: exception_handlers.py  exceptions.py  routers.py
src/api/schemas/: request_models.py
src/configs/: database.py  environment.py  log.py
src/crud/: product.py
src/models/: __init__.py  base.py  models.py  product.py
src/routers/: product.py
src/schemas/: request_models.py  response_models.py
src/schemas/request_models/: product.py
src/services/: parser.py  parsing.py
src/tasks/: celery_tasks.py
