[tool.poetry]
name = "legsy-test-task"
version = "0.1.0"
description = "Job placement task for Legsy"
authors = ["Ivan Skvortsov <pprofcheg@gmail.com>"]
readme = "README.md"
packages = [{include = "legsy_test_task"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
