[tool.poetry]
name = "legsy-test-task"
version = "0.1.0"
description = "Job placement task for Legsy"
authors = ["Ivan Skvortsov <pprofcheg@gmail.com>"]
readme = "README.md"
packages = [{include = "legsy_test_task"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
requests = "^2.28.2"
sqlalchemy = "^2.0.9"
asyncpg = "^0.27.0"
alembic = "^1.10.3"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
celery = "^5.2.7"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
